Just added cursor rules and updated TODO.mdx

--- a/TODO.mdx
+++ b/TODO.mdx
@@ -3,3 +3,8 @@
 3: implement AI score check
 4: Implent AI fps estimate
 5: implement AI reccomendations for settings based on the game.
+
+
+Alternatively, when we click the scan my hardware button, it could take us to a new page saying automatically scan or manually input hardware.
+The other option is that we click automatically scan, and it does automatically scan and pulls the info that it is able to, and then we can allow the user to edit the information
+
